--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,9 +98,12 @@ a.category-badge > span.badge:hover {
     right: 10px;
 }
 
-.btt-link {
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
+
 
 
 
