--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,7 +51,6 @@ body {
     color: white !important;
 }
 
-
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -73,7 +72,6 @@ body {
 .bg-black {
     background: #000 !important;
 }
-
 
 .overlay {
 	height: 100%;
@@ -104,6 +102,10 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
@@ -121,7 +123,7 @@ a.category-badge > span.badge:hover {
     height: 2px;
 }
 
-* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -235,7 +237,6 @@ a.category-badge > span.badge:hover {
 	color: #17a2b8; /* text-info */
 }
 
-
 /* Product Form */
 
 .btn-file {
@@ -265,7 +266,6 @@ a.category-badge > span.badge:hover {
 }
 
 
-
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
@@ -281,13 +281,49 @@ a.category-badge > span.badge:hover {
     }
 }
 
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
-        
         padding-top: 116px;
     }
 
     body {
         height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
     }
 }
